--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -10,8 +10,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-          cache: yarn
-
+          
       - name: 🏗 Setup EAS
         uses: expo/expo-github-action@v8
         with:
@@ -19,10 +18,10 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
 
       - name: 📦 Install dependencies
-        run: yarn install
+        run: npm install
 
       - name: 📦 Verify unit tests.
-        run: yarn run test
+        run: npm run test
 
       - name: 🚀 Create preview
         uses: expo/expo-github-action/preview@v8
