--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,6 +2,8 @@ on: [pull_request]
 jobs:
   preview:
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
     steps:
       - name: 🏗 Setup repo
         uses: actions/checkout@v3
@@ -23,5 +25,9 @@ jobs:
       - name: 📦 Verify unit tests.
         run: npm run test
 
-      - name: 🚀 Build app
-        run: eas build --non-interactive --platform android --environment development
+      - name: 🚀 Create preview
+        uses: expo/expo-github-action/preview@v8
+        with:
+          # `github.event.pull_request.head.ref` is only available on `pull_request` triggers.
+          # Use your own, or keep the automatically inferred branch name from `--auto`, when using different triggers.
+          command: eas update --auto --branch ${{ github.event.pull_request.head.ref }} --environment development
