--- a/.github/workflows/pr-request.yml
+++ b/.github/workflows/pr-request.yml
@@ -1,7 +1,4 @@
-on: 
-  push:
-    branches:
-      - main
+on: [pull_request]
 jobs:
   preview:
     runs-on: ubuntu-latest
@@ -31,6 +28,4 @@ jobs:
       - name: 🚀 Create preview
         uses: expo/expo-github-action/preview@v8
         with:
-          # `github.event.pull_request.head.ref` is only available on `pull_request` triggers.
-          # Use your own, or keep the automatically inferred branch name from `--auto`, when using different triggers.
           command: eas update --auto --branch ${{ github.event.pull_request.head.ref }} --environment development
