--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "i18n-js": "^4.5.1",
+    "i18next": "^24.2.2",
     "nativewind": "^4.1.23",
     "postcss": "^8.5.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.0",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker-select": "^9.3.1",
